# llama.cpp

./: CMakeLists.txt
common/: arg.cpp  common.cpp  common.h  log.cpp
examples/main/: CMakeLists.txt  ca.cpp  fake_ca.cpp  infer.cpp  main.cpp
examples/simple/: CMakeLists.txt
ggml/: CMakeLists.txt
ggml/include/: ggml-rknpu-re.h  ggml-rknpu2.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-backend.c  ggml-rknpu-re.cpp  ggml-rknpu2.cpp  ggml.c
ggml/src/ggml-rknpu-re/: matmul_cpu_check.c  matmul_cpu_check.h  npu_interface.c  npu_interface.h  npu_matmul.c  npu_matmul.h  rknpu-ioctl.h
ggml/src/ggml-sycl/dpct/: helper.hpp
infer_calling_test/: CMakeLists.txt  infer.h  main.cpp
spm-headers/: ggml-backend.h
src/: CMakeLists.txt  alloc-stage-chcore.cpp  alloc-stage.cpp  ca-backend.cpp  crypto.cpp  crypto.h  decrypt-stage.cpp  interface.h  io-aio.cpp  io-backend.cpp  io-frontend.cpp  io-frontend.h  io-libaio.cpp  io-stage.cpp  io.h  layer-sched.cpp  llama-sampling.cpp  llama.cpp  mapping.cpp  mapping.h  my_assert.h  pipeline.cpp  pipeline.h  prefetch.cpp  prefetch.h
